[gd_scene load_steps=2 format=3 uid="uid://bowihm3p0j4x7"]

[ext_resource type="Script" uid="uid://c0voqehb7pues" path="res://scripts/ui/pause_menu.gd" id="1_50142"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_50142")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.985
offset_right = 1.0
offset_bottom = -0.280029
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="RespawnButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Respawn"
